--- a/i18n/po/ja_JP/_guides/security-jpa.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-jpa.adoc.po
@@ -2,18 +2,18 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-10 18:26+0900\n"
 "PO-Revision-Date: 2021-01-09 12:59+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
@@ -32,9 +32,9 @@ msgid ""
 "store your user identities with link:hibernate-orm[Hibernate ORM] or link:"
 "hibernate-orm-panache[Hibernate ORM with Panache]."
 msgstr ""
-"このガイドでは、Quarkusアプリケーションがデータベースを使用し、 link:hibernate-orm[Hibernate ORM]または "
-"link:hibernate-orm-panache[Hibernate ORM with "
-"Panache]を使用してユーザーIDを保存する方法を説明します。"
+"このガイドでは、Quarkusアプリケーションがデータベースを使用し、 link:"
+"hibernate-orm[Hibernate ORM]または link:hibernate-orm-panache[Hibernate ORM "
+"with Panache]を使用してユーザーIDを保存する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:14
@@ -78,7 +78,9 @@ msgstr "Architecture"
 msgid ""
 "In this example, we build a very simple microservice which offers three "
 "endpoints:"
-msgstr "この例では、3つのエンドポイントを提供する非常にシンプルなマイクロサービスを構築します："
+msgstr ""
+"この例では、3つのエンドポイントを提供する非常にシンプルなマイクロサービスを構"
+"築します："
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:28
@@ -106,11 +108,13 @@ msgid ""
 "Control) where only users granted with the `user` role can access. As a "
 "response, it returns a JSON document with details about the user."
 msgstr ""
-"`/api/public` エンドポイントは匿名でアクセスできます。 `/api/admin` エンドポイントは RBAC (Role-Based "
-"Access Control) で保護されており、 `admin` の役割を与えられたユーザーのみがアクセスできます。このエンドポイントでは、 "
-"`@RolesAllowed` アノテーションを使用して、アクセス制約を宣言的に強制します。 `/api/users/me` エンドポイントも RBAC "
-"(Role-Based Access Control) で保護されており、 `user` "
-"ロールで付与されたユーザーのみがアクセスできます。レスポンスとして、ユーザーに関する詳細を含むJSONドキュメントを返します。"
+"`/api/public` エンドポイントは匿名でアクセスできます。 `/api/admin` エンドポ"
+"イントは RBAC (Role-Based Access Control) で保護されており、 `admin` の役割を"
+"与えられたユーザーのみがアクセスできます。このエンドポイントでは、 "
+"`@RolesAllowed` アノテーションを使用して、アクセス制約を宣言的に強制します。 "
+"`/api/users/me` エンドポイントも RBAC (Role-Based Access Control) で保護され"
+"ており、 `user` ロールで付与されたユーザーのみがアクセスできます。レスポンス"
+"として、ユーザーに関する詳細を含むJSONドキュメントを返します。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:35
@@ -124,7 +128,9 @@ msgid ""
 "We recommend that you follow the instructions in the next sections and "
 "create the application step by step.  However, you can go right to the "
 "completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr ""
+"次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めし"
+"ます。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:41
@@ -132,8 +138,8 @@ msgid ""
 "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download "
 "an {quickstarts-archive-url}[archive]."
 msgstr ""
-"Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-"
-"archive-url}[archive] をダウンロードしてください。"
+"Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または "
+"{quickstarts-archive-url}[archive] をダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:43
@@ -141,8 +147,8 @@ msgid ""
 "The solution is located in the `security-jpa-quickstart` {quickstarts-tree-"
 "url}/security-jpa-quickstart[directory]."
 msgstr ""
-"ソリューションは `security-jpa-quickstart` {quickstarts-tree-url}/security-jpa-"
-"quickstart[directory] にあります。"
+"ソリューションは `security-jpa-quickstart` {quickstarts-tree-url}/security-"
+"jpa-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:44
@@ -155,7 +161,9 @@ msgstr "Mavenプロジェクトの作成"
 msgid ""
 "First, we need a new project. Create a new project with the following "
 "command:"
-msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
+msgstr ""
+"まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成し"
+"ます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:56
@@ -164,8 +172,7 @@ msgid ""
 "mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=security-jpa-quickstart \\\n"
-"    -Dextensions=\"security-jpa,jdbc-postgresql,resteasy,hibernate-orm-"
-"panache\" \\\n"
+"    -Dextensions=\"security-jpa,jdbc-postgresql,resteasy,hibernate-orm-panache\" \\\n"
 "    -DnoExamples\n"
 "cd security-jpa-quickstart\n"
 msgstr ""
@@ -175,7 +182,9 @@ msgstr ""
 msgid ""
 "Don't forget to add the database connector library of choice. Here we are "
 "using PostgreSQL as identity store."
-msgstr "選択したデータベースコネクタライブラリを追加することを忘れないでください。ここでは、PostgreSQLをIDストアとして使用しています。"
+msgstr ""
+"選択したデータベースコネクタライブラリを追加することを忘れないでください。こ"
+"こでは、PostgreSQLをIDストアとして使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:65
@@ -183,8 +192,8 @@ msgid ""
 "This command generates a Maven project, importing the `security-jpa` "
 "extension which allows you to map your security source to JPA entities."
 msgstr ""
-"このコマンドは、セキュリティ ソースを JPA エンティティにマップできる `security-jpa` 拡張機能をインポートして、Maven "
-"プロジェクトを生成します。"
+"このコマンドは、セキュリティ ソースを JPA エンティティにマップできる "
+"`security-jpa` 拡張機能をインポートして、Maven プロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:68
@@ -193,8 +202,9 @@ msgid ""
 "`security-jpa` extension to your project by running the following command in "
 "your project base directory:"
 msgstr ""
-"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに "
-"`security-jpa` 拡張機能を追加することができます。"
+"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレク"
+"トリで以下のコマンドを実行することで、プロジェクトに `security-jpa` 拡張機能"
+"を追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:72
@@ -228,7 +238,9 @@ msgstr "アプリケーションの記述"
 msgid ""
 "Let's start by implementing the `/api/public` endpoint. As you can see from "
 "the source code below, it is just a regular JAX-RS resource:"
-msgstr "`/api/public` エンドポイントの実装から始めましょう。以下のソースコードから分かるように、通常のJAX-RSリソースです："
+msgstr ""
+"`/api/public` エンドポイントの実装から始めましょう。以下のソースコードから分"
+"かるように、通常のJAX-RSリソースです："
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:91 upstream/_guides/security-jpa.adoc:116
@@ -253,7 +265,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:100
 #, no-wrap
-msgid "@Path(\"/api/public\")\n"
+msgid ""
+"@Path(\"/api/public\")\n"
 "public class PublicResource {\n"
 msgstr ""
 
@@ -277,8 +290,9 @@ msgid ""
 "difference here is that we are using a `@RolesAllowed` annotation to make "
 "sure that only users granted with the `admin` role can access the endpoint:"
 msgstr ""
-"`/api/admin` エンドポイントのソースコードも非常にシンプルです。ここでの主な違いは、 `admin` "
-"ロールで付与されたユーザーだけがエンドポイントにアクセスできるように `@RolesAllowed` アノテーションを使用していることです："
+"`/api/admin` エンドポイントのソースコードも非常にシンプルです。ここでの主な違"
+"いは、 `admin` ロールで付与されたユーザーだけがエンドポイントにアクセスできる"
+"ように `@RolesAllowed` アノテーションを使用していることです："
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:122
@@ -294,7 +308,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:125
 #, no-wrap
-msgid "@Path(\"/api/admin\")\n"
+msgid ""
+"@Path(\"/api/admin\")\n"
 "public class AdminResource {\n"
 msgstr ""
 
@@ -320,9 +335,10 @@ msgid ""
 "Principal and we return the user's name. This information is loaded from the "
 "database."
 msgstr ""
-"最後に、 `/api/users/me` エンドポイントを考えてみましょう。下のソースコードを見ればわかるように、 `user` "
-"の役割を持つユーザのみを信頼しています。現在認証されているプリンシパルへのアクセスを得るために `SecurityContext` "
-"を使用しており、ユーザーの名前を返します。この情報はデータベースから読み込まれます。"
+"最後に、 `/api/users/me` エンドポイントを考えてみましょう。下のソースコードを"
+"見ればわかるように、 `user` の役割を持つユーザのみを信頼しています。現在認証"
+"されているプリンシパルへのアクセスを得るために `SecurityContext` を使用してお"
+"り、ユーザーの名前を返します。この情報はデータベースから読み込まれます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:148
@@ -339,7 +355,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:151
 #, no-wrap
-msgid "@Path(\"/api/users\")\n"
+msgid ""
+"@Path(\"/api/users\")\n"
 "public class UserResource {\n"
 msgstr ""
 
@@ -368,13 +385,14 @@ msgid ""
 "We can now describe how our security information is stored in our model by "
 "adding a few annotations to our `User` entity:"
 msgstr ""
-"これで、 `User` "
-"エンティティにいくつかのアノテーションを追加することで、セキュリティ情報がモデルにどのように保存されているかを説明することができます。"
+"これで、 `User` エンティティにいくつかのアノテーションを追加することで、セ"
+"キュリティ情報がモデルにどのように保存されているかを説明することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:171
 #, no-wrap
-msgid "import javax.persistence.Entity;\n"
+msgid ""
+"import javax.persistence.Entity;\n"
 "import javax.persistence.Table;\n"
 msgstr ""
 
@@ -413,12 +431,10 @@ msgid ""
 "    /**\n"
 "     * Adds a new user in the database\n"
 "     * @param username the user name\n"
-"     * @param password the unencrypted password (it will be encrypted with "
-"bcrypt)\n"
+"     * @param password the unencrypted password (it will be encrypted with bcrypt)\n"
 "     * @param role the comma-separated roles\n"
 "     */\n"
-"    public static void add(String username, String password, String role) { "
-"<5>\n"
+"    public static void add(String username, String password, String role) { <5>\n"
 "        User user = new User();\n"
 "        user.username = username;\n"
 "        user.password = BcryptUtil.bcryptHash(password);\n"
@@ -434,7 +450,8 @@ msgid ""
 "The `security-jpa` extension is only initialized if there is a single entity "
 "annotated with `@UserDefinition`."
 msgstr ""
-"`security-jpa` 拡張子は、 `@UserDefinition` でアノテーションされた単一のエンティティがある場合にのみ初期化されます。"
+"`security-jpa` 拡張子は、 `@UserDefinition` でアノテーションされた単一のエン"
+"ティティがある場合にのみ初期化されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:210
@@ -443,8 +460,9 @@ msgid ""
 "Hibernate ORM entity or a Hibernate ORM with Panache entity as in this "
 "example."
 msgstr ""
-"このアノテーションは、単一のエンティティに存在しなければなりません。この例のように、通常のHibernate ORMエンティティまたはHibernate "
-"ORM with Panacheエンティティにすることができます。"
+"このアノテーションは、単一のエンティティに存在しなければなりません。この例の"
+"ように、通常のHibernate ORMエンティティまたはHibernate ORM with Panacheエン"
+"ティティにすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:211
@@ -458,22 +476,27 @@ msgid ""
 "bcrypt hashed passwords, but you can also configure it for clear text "
 "passwords."
 msgstr ""
-"これは、パスワードに使用するフィールドを示します。これはデフォルトでは bcrypt "
-"ハッシュ化されたパスワードを使用するように設定されていますが、クリアテキストパスワード用に設定することもできます。"
+"これは、パスワードに使用するフィールドを示します。これはデフォルトでは "
+"bcrypt ハッシュ化されたパスワードを使用するように設定されていますが、クリアテ"
+"キストパスワード用に設定することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:213
 msgid ""
 "This indicates the comma-separated list of roles added to the target "
 "Principal representation attributes."
-msgstr "これは、対象のプリンシパル表現属性に追加されたロールのコンマ区切りリストを示します。"
+msgstr ""
+"これは、対象のプリンシパル表現属性に追加されたロールのコンマ区切りリストを示"
+"します。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:214
 msgid ""
 "This method allows us to add users while hashing the password with the "
 "proper bcrypt hash."
-msgstr "この方法では、パスワードを適切なbcryptハッシュでハッシュしながらユーザーを追加することができます。"
+msgstr ""
+"この方法では、パスワードを適切なbcryptハッシュでハッシュしながらユーザーを追"
+"加することができます。"
 
 #. type: Title ===
 #: upstream/_guides/security-jpa.adoc:215
@@ -486,7 +509,9 @@ msgstr "アプリケーションの設定"
 msgid ""
 "The `security-jpa` extension requires at least one datasource to access to "
 "your database."
-msgstr "`security-jpa` 拡張モジュールは、データベースにアクセスするために少なくとも一つのデータソースが必要です。"
+msgstr ""
+"`security-jpa` 拡張モジュールは、データベースにアクセスするために少なくとも一"
+"つのデータソースが必要です。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:225
@@ -512,8 +537,9 @@ msgid ""
 "production) and we initialize the database with users and roles in the "
 "`Startup` class:"
 msgstr ""
-"私たちのコンテキストでは、IDストアとしてPostgreSQLを使用しています。データベーススキーマはHibernate "
-"ORMによって起動時に自動的に作成され（本番ではこれを変更します）、 `Startup` クラスのユーザとロールでデータベースを初期化します。"
+"私たちのコンテキストでは、IDストアとしてPostgreSQLを使用しています。データ"
+"ベーススキーマはHibernate ORMによって起動時に自動的に作成され（本番ではこれを"
+"変更します）、 `Startup` クラスのユーザとロールでデータベースを初期化します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:239
@@ -553,8 +579,9 @@ msgid ""
 "clear-text passwords in production environments ;-).  As a result, the "
 "`security-jpa` defaults to using bcrypt-hashed passwords."
 msgstr ""
-"おそらく役に立たないと思いますが、本番環境ではクリアテキストのパスワードを保存してはいけないことをご注意ください。)その結果、 `security-"
-"jpa` はデフォルトで bcrypt でハッシュ化されたパスワードを使用するようになりました。"
+"おそらく役に立たないと思いますが、本番環境ではクリアテキストのパスワードを保"
+"存してはいけないことをご注意ください。)その結果、 `security-jpa` はデフォルト"
+"で bcrypt でハッシュ化されたパスワードを使用するようになりました。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:261
@@ -569,8 +596,9 @@ msgid ""
 "enable it by setting `quarkus.http.auth.basic=true` in the `application."
 "properties` file."
 msgstr ""
-"以下のテストでは、基本的な認証メカニズムを使用していますが、 `application.properties` ファイルに `quarkus.http."
-"auth.basic=true` を設定することで有効にすることができます。"
+"以下のテストでは、基本的な認証メカニズムを使用していますが、 `application."
+"properties` ファイルに `quarkus.http.auth.basic=true` を設定することで有効に"
+"することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:270
@@ -579,7 +607,9 @@ msgid ""
 "database.  The very first thing to check is to ensure the anonymous access "
 "works."
 msgstr ""
-"アプリケーションが保護され、アイデンティティがデータベースから提供されるようになりました。非常に最初に確認しなければならないことは、匿名アクセスが機能することを確認することです。"
+"アプリケーションが保護され、アイデンティティがデータベースから提供されるよう"
+"になりました。非常に最初に確認しなければならないことは、匿名アクセスが機能す"
+"ることを確認することです。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:277
@@ -646,8 +676,9 @@ msgid ""
 "user and loaded their roles.  The `admin` user is authorized to access to "
 "the protected resources."
 msgstr ""
-"`admin:admin` 資格情報を提供することで、拡張機能はユーザーを認証し、そのロールをロードしました。 `admin` "
-"ユーザーは、保護されたリソースへのアクセスを許可されています。"
+"`admin:admin` 資格情報を提供することで、拡張機能はユーザーを認証し、そのロー"
+"ルをロードしました。 `admin` ユーザーは、保護されたリソースへのアクセスを許可"
+"されています。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:308
@@ -679,7 +710,9 @@ msgstr ""
 msgid ""
 "Finally, using the user `user` works and the security context contains the "
 "principal details (username for instance)."
-msgstr "最後に、ユーザ `user` を使用すると動作し、セキュリティコンテキストには主要な詳細（例えばユーザ名）が含まれています。"
+msgstr ""
+"最後に、ユーザ `user` を使用すると動作し、セキュリティコンテキストには主要な"
+"詳細（例えばユーザ名）が含まれています。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:327
@@ -705,15 +738,16 @@ msgstr "サポートされているモデルの種類"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:334
-msgid ""
-"The `@UserDefinition` class must be a JPA entity (with Panache or not)."
+msgid "The `@UserDefinition` class must be a JPA entity (with Panache or not)."
 msgstr ""
-"`@UserDefinition` クラスは JPA エンティティである必要があります（Panache を使用しているかどうかは問いません）。"
+"`@UserDefinition` クラスは JPA エンティティである必要があります（Panache を使"
+"用しているかどうかは問いません）。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:335
 msgid "The `@Username` and `@Password` field types must be of type `String`."
-msgstr "`@Username` と `@Password` フィールドの型は `String` でなければなりません。"
+msgstr ""
+"`@Username` と `@Password` フィールドの型は `String` でなければなりません。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:336
@@ -722,16 +756,19 @@ msgid ""
 "or alternately a `Collection<X>` where `X` is an entity class with one "
 "`String` field annotated with the `@RolesValue` annotation."
 msgstr ""
-"`@Roles` フィールドは `String` か `Collection&amp;lt;String&amp;gt;` "
-"のいずれかのタイプであるか、または `Collection&amp;lt;X&amp;gt;` である必要があります。 `X` はエンティティクラスで、 "
-"`@RolesValue` アノテーションが付与された `String` フィールドが 1 つあります。"
+"`@Roles` フィールドは `String` か `Collection&amp;lt;String&amp;gt;` のいずれ"
+"かのタイプであるか、または `Collection&amp;lt;X&amp;gt;` である必要がありま"
+"す。 `X` はエンティティクラスで、 `@RolesValue` アノテーションが付与された "
+"`String` フィールドが 1 つあります。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:337
 msgid ""
 "Each `String` role element type will be parsed as a comma-separated list of "
 "roles."
-msgstr "各 `String` role 要素の型は、カンマで区切られたロールのリストとして解析されます。"
+msgstr ""
+"各 `String` role 要素の型は、カンマで区切られたロールのリストとして解析されま"
+"す。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:338
@@ -759,7 +796,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:353
 #, no-wrap
-msgid "    @Password\n"
+msgid ""
+"    @Password\n"
 "    public String pass;\n"
 msgstr ""
 
@@ -776,7 +814,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:361
 #, no-wrap
-msgid "@Entity\n"
+msgid ""
+"@Entity\n"
 "public class Role extends PanacheEntity {\n"
 msgstr ""
 
@@ -791,7 +830,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:368
 #, no-wrap
-msgid "    @RolesValue\n"
+msgid ""
+"    @RolesValue\n"
 "    public String role;\n"
 "}\n"
 msgstr ""
@@ -809,8 +849,8 @@ msgid ""
 "wikipedia.org/wiki/Bcrypt[bcrypt] under the https://en.wikipedia.org/wiki/"
 "Crypt_(C)[Modular Crypt Format] (MCF)."
 msgstr ""
-"デフォルトでは、パスワードは MCF ( link:https://en.wikipedia.org/wiki/Crypt_©[Modular "
-"Crypt Format]) の下で link:https://en.wikipedia.org/wiki/"
+"デフォルトでは、パスワードは MCF ( link:https://en.wikipedia.org/wiki/"
+"Crypt_©[Modular Crypt Format]) の下で link:https://en.wikipedia.org/wiki/"
 "Bcrypt[bcrypt]でハッシュ化されて保存されると考えています。"
 
 #. type: Plain text
@@ -821,9 +861,10 @@ msgid ""
 "creating a random salt and hashing in 10 iterations (though you can specify "
 "the iterations and salt too)."
 msgstr ""
-"このようなハッシュ化されたパスワードを作成する必要がある場合は、便利な `String BcryptUtil.bcryptHash(String "
-"password)` 関数を用意しています。デフォルトでは、ランダムなソルトを作成して 10 回の繰り返しでハッシュ化します "
-"(繰り返しとソルトも指定できます)。"
+"このようなハッシュ化されたパスワードを作成する必要がある場合は、便利な "
+"`String BcryptUtil.bcryptHash(String password)` 関数を用意しています。デフォ"
+"ルトでは、ランダムなソルトを作成して 10 回の繰り返しでハッシュ化します (繰り"
+"返しとソルトも指定できます)。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:381
@@ -831,7 +872,9 @@ msgid ""
 "with MCF you don't need dedicated columns to store the hashing algorithm, "
 "the iterations count or the salt because they're all stored in the hashed "
 "value."
-msgstr "MCF を使うと、ハッシュアルゴリズムや反復回数、 ソルトを格納するための専用のカラムは必要ありません。"
+msgstr ""
+"MCF を使うと、ハッシュアルゴリズムや反復回数、 ソルトを格納するための専用のカ"
+"ラムは必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:384
@@ -840,8 +883,8 @@ msgid ""
 "`@Password(PasswordType.CLEAR)` but we strongly recommend against it in "
 "production."
 msgstr ""
-"警告: `@Password(PasswordType.CLEAR)` "
-"を使ってパスワードをクリアテキストで保存することもできますが、本番では絶対にしないことを強くお勧めします。"
+"警告: `@Password(PasswordType.CLEAR)` を使ってパスワードをクリアテキストで保"
+"存することもできますが、本番では絶対にしないことを強くお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:385
