--- a/i18n/po/ja_JP/_guides/security.adoc.po
+++ b/i18n/po/ja_JP/_guides/security.adoc.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-10 18:26+0900\n"
 "PO-Revision-Date: 2021-01-09 11:03+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
@@ -33,8 +33,8 @@ msgid ""
 "production-quality security for their Quarkus applications."
 msgstr ""
 "Quarkus Securityでは、開発者がQuarkusアプリケーションの商用品質のセキュリティ"
-"を構築するためのアーキテクチャ、複数の認証および認可メカニズム、その他のツール"
-"を提供しています。"
+"を構築するためのアーキテクチャ、複数の認証および認可メカニズム、その他のツー"
+"ルを提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:13
@@ -42,8 +42,8 @@ msgid ""
 "This document provides a brief overview of Quarkus Security and links to the "
 "individual guides."
 msgstr ""
-"このドキュメントでは、Quarkus Securityの簡単な概要と、各ガイドへのリンクについ"
-"て説明しています。"
+"このドキュメントでは、Quarkus Securityの簡単な概要と、各ガイドへのリンクにつ"
+"いて説明しています。"
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:14
@@ -56,7 +56,8 @@ msgstr "アーキテクチャ"
 msgid ""
 "`HttpAuthenticationMechanism` is the main entry into Quarkus HTTP Security."
 msgstr ""
-"`HttpAuthenticationMechanism`  は、Quarkus HTTP Securityのメインエントリです。"
+"`HttpAuthenticationMechanism`  は、Quarkus HTTP Securityのメインエントリで"
+"す。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:20
@@ -66,9 +67,9 @@ msgid ""
 "`IdentityProvider` to complete the conversion of these credentials to "
 "`SecurityIdentity`."
 msgstr ""
-"Quarkus Security Managerは、 `HttpAuthenticationMechanism`  を使用してHTTPリク"
-"エストから認証資格情報を抽出し、 `IdentityProvider`  に委任して、これらの資格"
-"情報の `SecurityIdentity`  への変換を完了させます。"
+"Quarkus Security Managerは、 `HttpAuthenticationMechanism`  を使用してHTTPリ"
+"クエストから認証資格情報を抽出し、 `IdentityProvider`  に委任して、これらの資"
+"格情報の `SecurityIdentity`  への変換を完了させます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:22
@@ -105,9 +106,9 @@ msgid ""
 "same information (or parts of it) such as `SecurityContext` for JAX-RS or "
 "`JsonWebToken` for JWT."
 msgstr ""
-"他の文脈では、JAX-RSであれば `SecurityContext`  、JWTであれば `JsonWebToken`  "
-"のように、同じ情報（またはその一部）を他の別の表現で表現している場合がありま"
-"す。"
+"他の文脈では、JAX-RSであれば `SecurityContext`  、JWTであれば "
+"`JsonWebToken`  のように、同じ情報（またはその一部）を他の別の表現で表現して"
+"いる場合があります。"
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:30
@@ -134,11 +135,11 @@ msgid ""
 "Basic and Form HTTP-based authentication mechanisms are the core "
 "authentication mechanisms supported in Quarkus.  Please see link:security-"
 "built-in-authentication#basic-auth[Basic HTTP Authentication] and link:"
-"security-built-in-authentication#form-auth[Form HTTP Authentication] for more "
-"information."
+"security-built-in-authentication#form-auth[Form HTTP Authentication] for "
+"more information."
 msgstr ""
-"Basic HTTPベースの認証メカニズムとForm HTTPベースの認証メカニズムは、Quarkusで"
-"サポートされている主要な認証メカニズムです。詳細については、 link:security-"
+"Basic HTTPベースの認証メカニズムとForm HTTPベースの認証メカニズムは、Quarkus"
+"でサポートされている主要な認証メカニズムです。詳細については、 link:security-"
 "built-in-authentication#basic-auth[基本HTTP認証]と link:security-built-in-"
 "authentication#form-auth[フォームHTTP認証]を参照してください。"
 
@@ -151,8 +152,8 @@ msgstr "相互TLS認証"
 #. type: Plain text
 #: upstream/_guides/security.adoc:42
 msgid ""
-"Quarkus provides Mutual TLS authentication so that you can authenticate users "
-"based on their X.509 certificates."
+"Quarkus provides Mutual TLS authentication so that you can authenticate "
+"users based on their X.509 certificates."
 msgstr ""
 "Quarkusは相互TLS認証を提供しているので、X.509証明書に基づいてユーザーを認証で"
 "きます。"
@@ -179,9 +180,9 @@ msgid ""
 "enabled OpenId Connect adapter which supports `Bearer Token` and "
 "`Authorization Code Flow` authentication mechanisms."
 msgstr ""
-"`quarkus-oidc`  エクステンションは、 `Bearer Token`  および `Authorization Code Flow`  認"
-"証メカニズムをサポートする、リアクティブで相互運用可能なマルチテナント対応の "
-"OpenId Connect アダプタを提供します。"
+"`quarkus-oidc`  エクステンションは、 `Bearer Token`  および `Authorization "
+"Code Flow`  認証メカニズムをサポートする、リアクティブで相互運用可能なマルチ"
+"テナント対応の OpenId Connect アダプタを提供します。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:51
@@ -193,11 +194,12 @@ msgid ""
 "to Quarkus by exchanging the provided code grant for ID, access and refresh "
 "tokens."
 msgstr ""
-"`Bearer Token`  メカニズムは、HTTP `Authorization`  ヘッダーからトークンを抽出"
-"します。 `Authorization Code Flow`  メカニズムは、OpenId Connect "
+"`Bearer Token`  メカニズムは、HTTP `Authorization`  ヘッダーからトークンを抽"
+"出します。 `Authorization Code Flow`  メカニズムは、OpenId Connect "
 "Authorization Code Flowを使用します。ユーザーをIDPにリダイレクトして認証を行"
-"い、提供されたCode GrantをID、アクセストークン、リフレッシュトークンと交換する"
-"ことで、ユーザーがQuarkusにリダイレクトされた後に認証プロセスを完了させます。"
+"い、提供されたCode GrantをID、アクセストークン、リフレッシュトークンと交換す"
+"ることで、ユーザーがQuarkusにリダイレクトされた後に認証プロセスを完了させま"
+"す。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:53
@@ -206,8 +208,8 @@ msgid ""
 "but both JWT and opaque (binary) tokens can be introspected remotely."
 msgstr ""
 "ID とアクセス `JWT` トークンは、リフレッシュ可能な `JWK` キーセットで検証され"
-"ますが、JWT と不透明な (バイナリの) トークンの両方をリモートで検証することがで"
-"きます。"
+"ますが、JWT と不透明な (バイナリの) トークンの両方をリモートで検証することが"
+"できます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:55
@@ -238,37 +240,38 @@ msgid ""
 "mechanisms use <<smallrye-jwt, SmallRye JWT>> to represent JWT tokens as "
 "Microprofile JWT `org.eclipse.microprofile.jwt.JsonWebToken`."
 msgstr ""
-"`quarkus-oidc` の`Bearer` と `Authorization Code Flow`  認証メカニズムはいずれ"
-"も link:#smallrye-jwt[SmallRye JWT ]を使用して、JWT トークンを Microprofile "
-"JWT `org.eclipse.microprofile.jwt.JsonWebToken` として表現しています。"
+"`quarkus-oidc` の`Bearer` と `Authorization Code Flow`  認証メカニズムはいず"
+"れも link:#smallrye-jwt[SmallRye JWT ]を使用して、JWT トークンを "
+"Microprofile JWT `org.eclipse.microprofile.jwt.JsonWebToken` として表現してい"
+"ます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:64
 msgid ""
 "See link:security-openid-connect-multitenancy[Using OpenID Connect Multi-"
 "Tenancy] for more information about multiple tenants which can support "
-"`Bearer` or `Authorization Code Flow` authentication mechanism and configured "
-"statically or dynamically."
+"`Bearer` or `Authorization Code Flow` authentication mechanism and "
+"configured statically or dynamically."
 msgstr ""
-"`Bearer`  または `Authorization Code Flow`  認証メカニズムをサポートし、静的ま"
-"たは動的に設定できる複数のテナントの詳細については、 link:security-openid-"
+"`Bearer`  または `Authorization Code Flow`  認証メカニズムをサポートし、静的"
+"または動的に設定できる複数のテナントの詳細については、 link:security-openid-"
 "connect-multitenancy[OpenID Connect マルチテナントの使用]を参照してください。"
 
 #. type: delimited block =
 #: upstream/_guides/security.adoc:69
 msgid ""
 "If you would like to have Quarkus OIDC extension enabled at runtime then set "
-"`quarkus.oidc.tenant-enabled=false` at build time and re-enable it at runtime "
-"using a system property.  See also link:security-openid-connect-"
+"`quarkus.oidc.tenant-enabled=false` at build time and re-enable it at "
+"runtime using a system property.  See also link:security-openid-connect-"
 "multitenancy#disable-tenant[Disabling Tenant Configurations] for more "
 "information about managing the individual tenant configurations in the multi-"
 "tenant OIDC deployments."
 msgstr ""
-"実行時にQuarkus OIDCエクステンションを有効にしたい場合は、ビルド時に `quarkus.oidc.tenant-"
-"enabled=false` を設定し、システムプロパティを使用して実行時に再度有効にしま"
-"す。マルチテナントOIDCデプロイメントでの個々のテナント設定の管理の詳細について"
-"は、テナント link:security-openid-connect-multitenancy#disable-tenant[設定の無"
-"効化]も参照してください。"
+"実行時にQuarkus OIDCエクステンションを有効にしたい場合は、ビルド時に "
+"`quarkus.oidc.tenant-enabled=false` を設定し、システムプロパティを使用して実"
+"行時に再度有効にします。マルチテナントOIDCデプロイメントでの個々のテナント設"
+"定の管理の詳細については、テナント link:security-openid-connect-"
+"multitenancy#disable-tenant[設定の無効化]も参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:72
@@ -290,8 +293,8 @@ msgid ""
 msgstr ""
 "Keycloakをプログラムで設定する必要がある場合は、 `quarkus-keycloak-admin-"
 "client` エクステンションの助けを借りて、 link:https://www.keycloak.org/docs/"
-"latest/server_development/#admin-rest-api[Keycloak Admin REST API]の使用を検討"
-"してください。"
+"latest/server_development/#admin-rest-api[Keycloak Admin REST API]の使用を検"
+"討してください。"
 
 #. type: Title ===
 #: upstream/_guides/security.adoc:79
@@ -307,8 +310,8 @@ msgid ""
 "them as `org.eclipse.microprofile.jwt.JsonWebToken`."
 msgstr ""
 "`quarkus-smallrye-jwt` はMicroprofile JWT 1.1.1.1 の実装と、署名・暗号化され"
-"た `JWT` トークンを検証し、 `org.eclipse.microprofile.jwt.JsonWebToken` として"
-"表現するための多くのオプションを提供します。"
+"た `JWT` トークンを検証し、 `org.eclipse.microprofile.jwt.JsonWebToken` とし"
+"て表現するための多くのオプションを提供します。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:84
@@ -317,9 +320,9 @@ msgid ""
 "Mechanism. It can currently verify only `JWT` tokens using the PEM keys or "
 "refreshable `JWK` key set."
 msgstr ""
-"それは `quarkus-oidc` ベアラートークン認証メカニズムに代わるものを提供します。"
-"現在、PEM 鍵または更新可能な `JWK` 鍵セットを使用して `JWT` トークンのみを検証"
-"することができます。"
+"それは `quarkus-oidc` ベアラートークン認証メカニズムに代わるものを提供しま"
+"す。現在、PEM 鍵または更新可能な `JWK` 鍵セットを使用して `JWT` トークンのみ"
+"を検証することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:86
@@ -327,8 +330,8 @@ msgid ""
 "Additionally it provides `JWT Generation API` for creating `signed`, `inner-"
 "signed` and/or `encrypted` `JWT` tokens with ease."
 msgstr ""
-"さらに、 `JWT Generation API` を提供して、 `signed` , `inner-signed` , および/"
-"または `encrypted` `JWT`トークンを簡単に作成することができます。"
+"さらに、 `JWT Generation API` を提供して、 `signed` , `inner-signed` , およ"
+"び/または `encrypted` `JWT`トークンを簡単に作成することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:88
@@ -359,7 +362,8 @@ msgstr ""
 #: upstream/_guides/security.adoc:94
 msgid "See the link:security-oauth2[Using OAuth2] guide for more information."
 msgstr ""
-"詳細については、 link:security-oauth2[OAuth2 の使用]ガイドを参照してください。"
+"詳細については、 link:security-oauth2[OAuth2 の使用]ガイドを参照してくださ"
+"い。"
 
 #. type: Title ===
 #: upstream/_guides/security.adoc:95
@@ -388,8 +392,8 @@ msgid ""
 "`IdentityProvider` converts the authentication credentials provided by "
 "`HttpAuthenticationMechanism` to `SecurityIdentity`."
 msgstr ""
-"`IdentityProvider`  は、 `HttpAuthenticationMechanism`  が提供する認証資格情報"
-"を `SecurityIdentity`  に変換します。"
+"`IdentityProvider`  は、 `HttpAuthenticationMechanism`  が提供する認証資格情"
+"報を `SecurityIdentity`  に変換します。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:106
@@ -400,9 +404,9 @@ msgid ""
 "`IdentityProvider` to convert a token to `SecurityIdentity`."
 msgstr ""
 "`OIDC` , `OAuth2` , `SmallRye JWT` , `LDAP`  などのエクステンションには、サ"
-"ポートされている認証フローに固有の `IdentityProvider` のインライン実装がありま"
-"す。例えば、 `quarkus-oidc` は独自の `IdentityProvider` を使用してトークンを "
-"`SecurityIdentity` に変換します。"
+"ポートされている認証フローに固有の `IdentityProvider` のインライン実装があり"
+"ます。例えば、 `quarkus-oidc` は独自の `IdentityProvider` を使用してトークン"
+"を `SecurityIdentity` に変換します。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:108
@@ -412,8 +416,8 @@ msgid ""
 "`SecurityIdentity`."
 msgstr ""
 "`Basic` または `Form` HTTP ベースの認証を使用している場合は、ユーザー名とパス"
-"ワードを `SecurityIdentity` に変換できる `IdentityProvider` を追加する必要があ"
-"ります。"
+"ワードを `SecurityIdentity` に変換できる `IdentityProvider` を追加する必要が"
+"あります。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:111
@@ -444,12 +448,12 @@ msgid ""
 "jwt` authentication mechanisms is not allowed because both will attempt to "
 "verify the token extracted from the HTTP `Authorization Bearer` scheme."
 msgstr ""
-"異なるソースから認証証明書を取得する場合、複数の認証メカニズムを組み合わせるこ"
-"とができます。例えば、組み込みの `Basic`  と `Bearer`   `quarkus-oidc`  認証機"
-"構を組み合わせることはできますが、 `quarkus-oidc`   `Bearer`  と `smallrye-"
-"jwt`  認証機構を組み合わせることはできません。なぜなら、両方とも HTTP "
-"`Authorization Bearer`  スキームから抽出されたトークンを検証しようとするからで"
-"す。"
+"異なるソースから認証証明書を取得する場合、複数の認証メカニズムを組み合わせる"
+"ことができます。例えば、組み込みの `Basic`  と `Bearer`   `quarkus-oidc`  認"
+"証機構を組み合わせることはできますが、 `quarkus-oidc`   `Bearer`  と "
+"`smallrye-jwt`  認証機構を組み合わせることはできません。なぜなら、両方とも "
+"HTTP `Authorization Bearer`  スキームから抽出されたトークンを検証しようとする"
+"からです。"
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:117
@@ -461,12 +465,12 @@ msgstr "プロアクティブ認証"
 #: upstream/_guides/security.adoc:121
 msgid ""
 "By default, Quarkus does what we call proactive authentication. This means "
-"that if an incoming request has a credential then that request will always be "
-"authenticated (even if the target page does not require authentication)."
+"that if an incoming request has a credential then that request will always "
+"be authenticated (even if the target page does not require authentication)."
 msgstr ""
 "デフォルトでは、Quarkusはプロアクティブ認証と呼ばれる認証を行います。これは、"
-"受信したリクエストにクレデンシャルがある場合、そのリクエストは常に認証されます"
-"（ターゲットページが認証を必要としない場合でも）。"
+"受信したリクエストにクレデンシャルがある場合、そのリクエストは常に認証されま"
+"す（ターゲットページが認証を必要としない場合でも）。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:123
@@ -516,9 +520,9 @@ msgid ""
 "about customizing Quarkus Security and other useful tips about the reactive "
 "security, registering the security providers, etc."
 msgstr ""
-"Quarkus Securityのカスタマイズの詳細や、リアクティブセキュリティ、セキュリティ"
-"プロバイダーの登録などの便利なヒントについては、セキュリティの link:security-"
-"customization[カスタマイズ]を参照してください。"
+"Quarkus Securityのカスタマイズの詳細や、リアクティブセキュリティ、セキュリ"
+"ティプロバイダーの登録などの便利なヒントについては、セキュリティの link:"
+"security-customization[カスタマイズ]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:134
@@ -529,11 +533,11 @@ msgstr "SSLによる安全な接続"
 #. type: Plain text
 #: upstream/_guides/security.adoc:137
 msgid ""
-"See the link:http-reference#ssl[Supporting secure connections with SSL] guide "
-"for more information."
+"See the link:http-reference#ssl[Supporting secure connections with SSL] "
+"guide for more information."
 msgstr ""
-"詳細については、 link:http-reference#ssl[SSL による安全な接続のサポート]ガイド"
-"を参照してください。"
+"詳細については、 link:http-reference#ssl[SSL による安全な接続のサポート]ガイ"
+"ドを参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:138
@@ -563,15 +567,15 @@ msgstr "SameSiteクッキー"
 #. type: Plain text
 #: upstream/_guides/security.adoc:145
 msgid ""
-"Please see link:vertx#same-site-cookie for information about adding a https://"
-"developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/"
+"Please see link:vertx#same-site-cookie for information about adding a "
+"https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/"
 "SameSite[SameSite] cookie property to any of the cookies set by a Quarkus "
 "endpoint."
 msgstr ""
 "Quarkusのエンドポイントによって設定されたCookieに link:https://developer."
 "mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite[SameSite]Cookieプ"
-"ロパティを追加する方法については、 link:vertx#sam-site-cookie を参照してくださ"
-"い。"
+"ロパティを追加する方法については、 link:vertx#sam-site-cookie を参照してくだ"
+"さい。"
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:146
@@ -603,8 +607,9 @@ msgstr "Vault"
 #. type: Plain text
 #: upstream/_guides/security.adoc:152
 msgid ""
-"Quarkus provides a very comprehensive HashiCorp Vault support, please see the "
-"link:vault[Quarkus and HashiCorp Vault] documentation for more information."
+"Quarkus provides a very comprehensive HashiCorp Vault support, please see "
+"the link:vault[Quarkus and HashiCorp Vault] documentation for more "
+"information."
 msgstr ""
 "Quarkusは非常に包括的な HashiCorp Vault のサポートを提供しています。詳しくは "
 "link:vault[Quarkus and HashiCorp Vault] のドキュメントを参照下さい。"
