--- a/i18n/po/ja_JP/_guides/tooling.adoc.po
+++ b/i18n/po/ja_JP/_guides/tooling.adoc.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-10 18:26+0900\n"
 "PO-Revision-Date: 2021-01-05 21:56+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
@@ -32,9 +32,9 @@ msgid ""
 "way down to deploying a Kubernetes application.  In this guide, we will "
 "explore:"
 msgstr ""
-"Quarkusには、開発者がライブリロードからKubernetesアプリケーションのデプロイ"
-"までを可能にするツールチェーンが付属しています。このガイドでは、以下を探検し"
-"ていきます："
+"Quarkusには、開発者がライブリロードからKubernetesアプリケーションのデプロイま"
+"でを可能にするツールチェーンが付属しています。このガイドでは、以下を探検して"
+"いきます："
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:14
@@ -90,8 +90,8 @@ msgid ""
 "convenient to use (coming soon)."
 msgstr ""
 "Quarkusには、すべての開発段階で役立つツールチェーンが付属しています。ビルド"
-"ツールとしてMavenやGradleを使うことができます。また、使い勝手の良いネイティ"
-"ブCLIも提供しています（近日公開予定）。"
+"ツールとしてMavenやGradleを使うことができます。また、使い勝手の良いネイティブ"
+"CLIも提供しています（近日公開予定）。"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:30
