--- a/i18n/po/ja_JP/_posts/2020-11-24-mutiny-vertx.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-11-24-mutiny-vertx.adoc.po
@@ -2,23 +2,23 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:09+0900\n"
+"POT-Creation-Date: 2021-01-10 18:26+0900\n"
 "PO-Revision-Date: 2021-01-01 22:10+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:1
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "---\n"
 msgstr ""
 
@@ -53,11 +53,13 @@ msgid ""
 "Several posts have already mentioned this, but it deserves a specific blog "
 "post.  So, here we are."
 msgstr ""
-"よく次の質問をされます：「QuarkusでEclipse Vert.xを使うにはどうすればいいですか？」確かに、QuarkusではVert."
-"xを使用することができます。 _Verticles_ をデプロイしたり、イベントバスと通信したり、Vert."
-"xエコシステムのものなら何でも使えます。しかし、QuarkusでVert."
-"xのMutinyバリアントを使用して、Quarkusが提供する他のReactive "
-"APIとシームレスな体験を得ることもできます。これについてはすでにいくつかの記事で触れていますが、具体的なブログ記事に値する内容です。というわけで、ここで紹介します。"
+"よく次の質問をされます：「QuarkusでEclipse Vert.xを使うにはどうすればいいです"
+"か？」確かに、QuarkusではVert.xを使用することができます。 _Verticles_ をデプ"
+"ロイしたり、イベントバスと通信したり、Vert.xエコシステムのものなら何でも使え"
+"ます。しかし、QuarkusでVert.xのMutinyバリアントを使用して、Quarkusが提供する"
+"他のReactive APIとシームレスな体験を得ることもできます。これについてはすでに"
+"いくつかの記事で触れていますが、具体的なブログ記事に値する内容です。というわ"
+"けで、ここで紹介します。"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:17
@@ -76,11 +78,13 @@ msgid ""
 "Vert.x popular in many areas such as web applications, IoT gateways, banking "
 "applications and so on."
 msgstr ""
-"https://vertx.io[Vert.x] はリアクティブなアプリケーションを構築するためのツールキットです。Vert.x "
-"のエコシステムは膨大です。HTTP やデータアクセス機能からマイクロサービスやセキュリティ機能を介したメッセージングクライアントまで、Vert.x "
-"のエコシステムは非常に多様で汎用性に富んでいます。その多様性を理解するには、Vert https://vertx.io/docs/[Vert."
-"xのドキュメント]をチェックしてください。そのため、Vert."
-"xはWebアプリケーション、IoTゲートウェイ、銀行アプリケーションなど、多くの分野で人気があります。"
+"https://vertx.io[Vert.x] はリアクティブなアプリケーションを構築するためのツー"
+"ルキットです。Vert.x のエコシステムは膨大です。HTTP やデータアクセス機能から"
+"マイクロサービスやセキュリティ機能を介したメッセージングクライアントまで、"
+"Vert.x のエコシステムは非常に多様で汎用性に富んでいます。その多様性を理解する"
+"には、Vert https://vertx.io/docs/[Vert.xのドキュメント]をチェックしてくださ"
+"い。そのため、Vert.xはWebアプリケーション、IoTゲートウェイ、銀行アプリケー"
+"ションなど、多くの分野で人気があります。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:27
@@ -88,8 +92,8 @@ msgid ""
 "As you may know, Quarkus is based on Vert.x.  Under the hood, there is a "
 "managed Vert.x instance that powers the rest of Quarkus."
 msgstr ""
-"ご存知のように、QuarkusはVert.xをベースにしています。裏側では、マネージドのVert."
-"xのインスタンスが存在し、Quarkusに力を与えています。"
+"ご存知のように、QuarkusはVert.xをベースにしています。裏側では、マネージドの"
+"Vert.xのインスタンスが存在し、Quarkusに力を与えています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:29
@@ -103,8 +107,9 @@ msgid ""
 "server handling the request and response.  That's also true for messaging, "
 "gRPC and almost any I/O."
 msgstr ""
-"QuarkusがHTTPエンドポイントを提供する場合、フードの下には、リクエストとレスポンスを処理するVert.x "
-"HTTPサーバーがあります。これは、メッセージング、gRPC、およびほぼすべてのI/Oにも当てはまります。"
+"QuarkusがHTTPエンドポイントを提供する場合、フードの下には、リクエストとレスポ"
+"ンスを処理するVert.x HTTPサーバーがあります。これは、メッセージング、gRPC、お"
+"よびほぼすべてのI/Oにも当てはまります。"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:33
@@ -114,8 +119,10 @@ msgstr "Vert.xの「素の」APIとその仲間たち"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:37
-msgid "Vert.x provides multiple APIs.  Let's focus on the \"bare\" one for now."
-msgstr "Vert.xは複数のAPIを提供しています。ここでは「素」のものに注目してみましょう。"
+msgid ""
+"Vert.x provides multiple APIs.  Let's focus on the \"bare\" one for now."
+msgstr ""
+"Vert.xは複数のAPIを提供しています。ここでは「素」のものに注目してみましょう。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:40
@@ -123,7 +130,8 @@ msgid ""
 "Following the reactive nature of Vert.x, the API contains mostly "
 "asynchronous methods.  These methods are following a syntax convention:"
 msgstr ""
-"Vert.x のリアクティブな性質にしたがって、API のほとんどを非同期メソッドが占めています。これらのメソッドは構文規則に従っています："
+"Vert.x のリアクティブな性質にしたがって、API のほとんどを非同期メソッドが占め"
+"ています。これらのメソッドは構文規則に従っています："
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:46
@@ -143,9 +151,10 @@ msgid ""
 "blocks.  So you need to pass a continuation callback, invoked with the "
 "outcome."
 msgstr ""
-"興味深いのは最後のパラメータです。これは関数、より正確にはコールバックで、操作が完了したときや失敗したときに呼び出されます。実際、Vert."
-"xの非同期の性質上、 `try/catch`  "
-"ブロックを使用することはできません。そのため、結果に応じて呼び出される継続コールバックを渡す必要があります。"
+"興味深いのは最後のパラメータです。これは関数、より正確にはコールバックで、操"
+"作が完了したときや失敗したときに呼び出されます。実際、Vert.xの非同期の性質"
+"上、 `try/catch`  ブロックを使用することはできません。そのため、結果に応じて"
+"呼び出される継続コールバックを渡す必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:55
@@ -153,8 +162,8 @@ msgid ""
 "`AsyncResult` is a structure capturing this outcome.  It contains the result "
 "(of type `<T>`) produced by the operation, or the failure if it failed."
 msgstr ""
-"`AsyncResult`  は、この結果をキャプチャする構造体です。これは、操作によって生成された結果 ( `<T>`  "
-"型)、または失敗した場合の失敗を含みます。"
+"`AsyncResult`  は、この結果をキャプチャする構造体です。これは、操作によって生"
+"成された結果 ( `<T>`  型)、または失敗した場合の失敗を含みます。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:57
@@ -168,8 +177,7 @@ msgid ""
 "vertx.fileSystem()\n"
 "    .readFile(\"my-file.txt\", ar -> {\n"
 "        if (ar.failed()) {\n"
-"            System.out.println(\"D'oh! Cannot read the file: \" + ar."
-"cause());\n"
+"            System.out.println(\"D'oh! Cannot read the file: \" + ar.cause());\n"
 "        } else {\n"
 "            System.out.println(\"File content is: \" + ar.result());\n"
 "        }\n"
@@ -186,9 +194,11 @@ msgid ""
 "or a failure.  Vert.x invokes this callback when the operation has either "
 "completed or failed."
 msgstr ""
-"このコードはファイルを読み込み、非同期操作であるため、ファイルが読み込まれたときにコールバックを呼び出します。 `readFile`  "
-"メソッドは、ファイルの完全な内容を読み込み、 _バッファ_ に蓄積します。コールバックは、ファイルの内容 ( `ar.result()` ) "
-"または失敗を含む非同期の結果を受け取ります。Vert.x は、操作が完了または失敗したときにこのコールバックを呼び出します。"
+"このコードはファイルを読み込み、非同期操作であるため、ファイルが読み込まれた"
+"ときにコールバックを呼び出します。 `readFile`  メソッドは、ファイルの完全な内"
+"容を読み込み、 _バッファ_ に蓄積します。コールバックは、ファイルの内容 ( `ar."
+"result()` ) または失敗を含む非同期の結果を受け取ります。Vert.x は、操作が完了"
+"または失敗したときにこのコールバックを呼び出します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:81
@@ -199,10 +209,11 @@ msgid ""
 "`WriteStream` is a data source.  You can push items to a `WriteStream.` "
 "These items will be consumed by a `ReadStream`:"
 msgstr ""
-"Vert.x は `ReadStream`  と `WriteStream`  クラスのおかげでストリームもサポートしています。 "
-"`ReadStream`  "
-"は読み込み可能なデータのストリームを表します。そのため、ストリームを通過するすべての項目で呼び出されるコールバックをアタッチすることができます。 "
-"`WriteStream`  はデータソースです。アイテムを `WriteStream.`  にプッシュすることができます。 これらのアイテムは "
+"Vert.x は `ReadStream`  と `WriteStream`  クラスのおかげでストリームもサポー"
+"トしています。 `ReadStream`  は読み込み可能なデータのストリームを表します。そ"
+"のため、ストリームを通過するすべての項目で呼び出されるコールバックをアタッチ"
+"することができます。 `WriteStream`  はデータソースです。アイテムを "
+"`WriteStream.`  にプッシュすることができます。 これらのアイテムは "
 "`ReadStream`  によって消費されます。"
 
 #. type: delimited block -
@@ -220,8 +231,7 @@ msgid ""
 "            // AsyncFile is a read stream, we can read from it:\n"
 "            file\n"
 "                    .exceptionHandler(t ->\n"
-"                        System.out.println(\"Failure while reading the file: "
-"\" + t)\n"
+"                        System.out.println(\"Failure while reading the file: \" + t)\n"
 "                    )\n"
 "                    // Reads the file chunk by chunk\n"
 "                    .handler(buffer ->\n"
@@ -237,7 +247,8 @@ msgid ""
 "Vert.x streams do not implement Reactive Streams.  Vert.x provides a "
 "different back-pressure protocol."
 msgstr ""
-"Vert.x ストリームは、Reactive Streams を実装していません。Vert.x は別のバックプレッシャープロトコルを提供します。"
+"Vert.x ストリームは、Reactive Streams を実装していません。Vert.x は別のバック"
+"プレッシャープロトコルを提供します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:112
@@ -246,9 +257,9 @@ msgid ""
 "API.  The \"bare\" API presented above is just one of the proposed API.  It "
 "also provides API in Kotlin, API for RX Java, and so on."
 msgstr ""
-"なぜこれらの API シェーピングルールが重要なのか？Vert."
-"xは単一のAPIを提供していません。上で紹介した「素の」APIは、提案されているAPIの1つに過ぎません。他にもKotlinでのAPIやRX "
-"JavaでのAPIなども提供されています。"
+"なぜこれらの API シェーピングルールが重要なのか？Vert.xは単一のAPIを提供して"
+"いません。上で紹介した「素の」APIは、提案されているAPIの1つに過ぎません。他に"
+"もKotlinでのAPIやRX JavaでのAPIなども提供されています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:116
@@ -258,8 +269,9 @@ msgid ""
 "methods are well-formed, the generator understands how they should be "
 "adapted."
 msgstr ""
-"これらの API は *生成され* ます。Vert.x は、Vert.x の \"むき出しの\" API を他の API に変換するコード "
-"ジェネレーターを提供します。すべてのメソッドは整形されているので、ジェネレータはどのように適応されるべきかを理解しています。"
+"これらの API は *生成され* ます。Vert.x は、Vert.x の \"むき出しの\" API を他"
+"の API に変換するコード ジェネレーターを提供します。すべてのメソッドは整形さ"
+"れているので、ジェネレータはどのように適応されるべきかを理解しています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:118
@@ -273,8 +285,9 @@ msgid ""
 "\"bare\" API.  Asynchronous methods and streams can follow different "
 "transformations, so the resulting API uses the right idioms."
 msgstr ""
-"生成されたコードは、異なる API を公開しており、各メソッドは「素」の API "
-"にデリゲートします。非同期メソッドとストリームは異なる変換を行うことができるので、生成されたAPIは適切なイディオムを使用します。"
+"生成されたコードは、異なる API を公開しており、各メソッドは「素」の API にデ"
+"リゲートします。非同期メソッドとストリームは異なる変換を行うことができるの"
+"で、生成されたAPIは適切なイディオムを使用します。"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:122
@@ -289,15 +302,16 @@ msgid ""
 "Vert.x.  However, we have written a code generator that generates the Mutiny "
 "variant for the Vert.x API:"
 msgstr ""
-"Mutiny はイベント駆動型のリアクティブプログラミングライブラリです。Vert.xとは関係ありませんが、Vert.x "
-"API用のMutiny版を生成するコードジェネレータを書いています。"
+"Mutiny はイベント駆動型のリアクティブプログラミングライブラリです。Vert.xとは"
+"関係ありませんが、Vert.x API用のMutiny版を生成するコードジェネレータを書いて"
+"います。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:129
 msgid "image:/assets/images/posts/mutiny-vertx/mutiny.png[]"
 msgstr ""
-"<span class=\"image\"><img src=\"/assets/images/posts/mutiny-vertx/mutiny."
-"png\" alt=\"mutiny\"></span>"
+"<span class=\"image\"><img src=\"/assets/images/posts/mutiny-vertx/mutiny.png"
+"\" alt=\"mutiny\"></span>"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:131
@@ -323,7 +337,9 @@ msgstr "`ReadStreams<T>`  ⇒消費することができます。 `Multi<T>`"
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:136
 msgid ""
 "`WriteStreams<T>` => can be consumed as Reactive Streams `Subscriber<T>`"
-msgstr "`WriteStreams<T>` ⇒ リアクティブストリームとして消費することができます。 `Subscriber<T>`"
+msgstr ""
+"`WriteStreams<T>` ⇒ リアクティブストリームとして消費することができます。 "
+"`Subscriber<T>`"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:138
@@ -331,8 +347,8 @@ msgid ""
 "It also adapts the Vert.x back pressure protocol to Reactive Streams, as "
 "Mutiny implements Reactive Streams."
 msgstr ""
-"また、MutinyがReactive Streamsを実装しているため、Vert.xのバックプレッシャープロトコルをReactive "
-"Streamsに適応させています。"
+"また、MutinyがReactive Streamsを実装しているため、Vert.xのバックプレッシャー"
+"プロトコルをReactive Streamsに適応させています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:140
@@ -351,12 +367,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:150
 msgid ""
-"One difference between the two APIs is related to laziness. The Vert.x "
-"\"bare\" API triggers the operation as soon as the method is called.  The "
-"Mutiny variant expects a subscription to trigger the operation."
+"One difference between the two APIs is related to laziness. The Vert.x \"bare"
+"\" API triggers the operation as soon as the method is called.  The Mutiny "
+"variant expects a subscription to trigger the operation."
 msgstr ""
-"2つのAPIの違いの1つは、怠惰性に関連しています。Vert.x の \"素の\" API "
-"は、メソッドが呼び出されるとすぐに操作をトリガーします。Mutiny 版では、操作をトリガーするためにサブスクリプションを期待しています。"
+"2つのAPIの違いの1つは、怠惰性に関連しています。Vert.x の \"素の\" API は、メ"
+"ソッドが呼び出されるとすぐに操作をトリガーします。Mutiny 版では、操作をトリ"
+"ガーするためにサブスクリプションを期待しています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:152
@@ -389,7 +406,9 @@ msgstr "もう少し補足"
 msgid ""
 "The Mutiny variant does not only apply the rules exposed in the previous "
 "section.  For asynchronous methods, it also provides:"
-msgstr "Mutiny版は、前のセクションで公開されたルールを適用するだけではありません。非同期メソッドに対しても提供します："
+msgstr ""
+"Mutiny版は、前のセクションで公開されたルールを適用するだけではありません。非"
+"同期メソッドに対しても提供します："
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:172
@@ -397,8 +416,8 @@ msgid ""
 "`xAndAwait()` methods - blocks the caller thread until the outcome is "
 "received. In the case of a failure, throws a `RuntimeException`"
 msgstr ""
-"`xAndAwait()`  メソッド - 結果を受け取るまで呼び出し元のスレッドをブロックします。失敗した場合は `RuntimeException` "
-"を発生させます"
+"`xAndAwait()`  メソッド - 結果を受け取るまで呼び出し元のスレッドをブロックし"
+"ます。失敗した場合は `RuntimeException` を発生させます"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:173
@@ -437,9 +456,9 @@ msgid ""
 "(MongoDB, Redis, Web client, Mqtt, and so on).  We are extending the support "
 "to cover the full Vert.x stack."
 msgstr ""
-"執筆時点では、Vert.xコアとVert."
-"xクライアント（MongoDB、Redis、Webクライアント、Mqttなど）のみを提供しています。私たちはVert.x "
-"スタック全体をカバーするようにサポートを拡張しているところです。"
+"執筆時点では、Vert.xコアとVert.xクライアント（MongoDB、Redis、Webクライアン"
+"ト、Mqttなど）のみを提供しています。私たちはVert.x スタック全体をカバーするよ"
+"うにサポートを拡張しているところです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:193
@@ -448,15 +467,18 @@ msgid ""
 "project.  Browse https://search.maven.org/search?q=a:smallrye-mutiny-"
 "vertx*[the list of dependency] to pick the one you need."
 msgstr ""
-"Mutinyクライアントを使用するには、適切な依存関係をプロジェクトに追加する必要があります。 https://search.maven.org/"
-"search?q=a:smallrye-mutiny-vertx*[依存関係のリスト]を見て、必要なものを選んでください。"
+"Mutinyクライアントを使用するには、適切な依存関係をプロジェクトに追加する必要"
+"があります。 https://search.maven.org/search?q=a:smallrye-mutiny-vertx*[依存"
+"関係のリスト]を見て、必要なものを選んでください。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:195
 msgid ""
 "For example, to you use the Mutiny variant of the Vert.x Web client, add the "
 "following dependency:"
-msgstr "例えば、Vert.x Web クライアントの Mutiny 版を使用するには、以下の依存関係を追加します："
+msgstr ""
+"例えば、Vert.x Web クライアントの Mutiny 版を使用するには、以下の依存関係を追"
+"加します："
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:203
@@ -472,14 +494,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:206
 msgid "Once you have the dependency, just create the web client instance:"
-msgstr "依存関係ができたら、あとはWebクライアントのインスタンスを作成するだけです："
+msgstr ""
+"依存関係ができたら、あとはWebクライアントのインスタンスを作成するだけです："
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:210
 #, no-wrap
-msgid ""
-"@Inject Vertx vertx; // Inject the managed io.vertx.mutiny.core.Vertx "
-"instance\n"
+msgid "@Inject Vertx vertx; // Inject the managed io.vertx.mutiny.core.Vertx instance\n"
 msgstr ""
 
 #. type: delimited block -
@@ -518,8 +539,8 @@ msgid ""
 "Something missing? Open an issue on https://github.com/smallrye/smallrye-"
 "reactive-utils/issues[SmallRye Reactive Utils]."
 msgstr ""
-"何か足りないものがあった場合は、 https://github.com/smallrye/smallrye-reactive-utils/"
-"issues[SmallRye Reactive Utils] に課題を提起してください。"
+"何か足りないものがあった場合は、 https://github.com/smallrye/smallrye-"
+"reactive-utils/issues[SmallRye Reactive Utils] に課題を提起してください。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:231
@@ -527,7 +548,8 @@ msgid ""
 "The Javadoc is available http://smallrye.io/smallrye-reactive-utils/apidocs/"
 "[here]."
 msgstr ""
-"Javadocは http://smallrye.io/smallrye-reactive-utils/apidocs/[こちら] にあります。"
+"Javadocは http://smallrye.io/smallrye-reactive-utils/apidocs/[こちら] にあり"
+"ます。"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-24-mutiny-vertx.adoc:232
@@ -543,5 +565,7 @@ msgid ""
 "implemented (following the same code generation approach), paving the road "
 "to a smooth upgrade."
 msgstr ""
-"Vert.x 4が間もなく登場します！既にQuarkusと異なるサテライトプロジェクトで移行作業を行っています。Vert.x "
-"4では、新しいジェネレータが実装されており（同じコード生成アプローチを踏襲しています）、スムーズなアップグレードへの道が開かれています。"
+"Vert.x 4が間もなく登場します！既にQuarkusと異なるサテライトプロジェクトで移行"
+"作業を行っています。Vert.x 4では、新しいジェネレータが実装されており（同じ"
+"コード生成アプローチを踏襲しています）、スムーズなアップグレードへの道が開か"
+"れています。"
